fix in width pagination. Made it visible in the mobile version

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -81,41 +81,3 @@ input[type='radio'].visually-hidden {
 .section-films {
   padding-bottom: 80px;
 }
-
-//! перенести
-
-.film-card:hover .close-btn {
-  opacity: 1;
-}
-
-.close-btn {
-  position: absolute;
-  top: -10px;
-  right: -10px;
-  width: 30px;
-  height: 30px;
-  background: red;
-  border-radius: 50%;
-  opacity: 0;
-  @include transition;
-
-  &::before,
-  &::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 70%;
-    height: 2px;
-    display: block;
-    background: $main-white;
-  }
-
-  &::before {
-    transform: translate(-50%, -50%) rotate(45deg);
-  }
-
-  &::after {
-    transform: translate(-50%, -50%) rotate(-45deg);
-  }
-}
