--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -66,3 +66,10 @@
 .copyright-link {
   color: #6b6a6a;
 }
+
+.team-link {
+  display: block;
+  margin-top: 15px;
+  text-align: center;
+  font-size: 12px;
+}
